Fix for BUG#7425. The reported problems were due to two completely unrelated omissions. 1) The file sort procedure didn't correctly create the sort key in    make_sortkey when the sortkey was an unsigned integer. 2) The name resolution procedure for column references inside a HAVING    clause did not propagate the unsigned_flag of the resolved references. This patch corrects both problems.